--- a/award.html
+++ b/award.html
@@ -1976,7 +1976,7 @@
 
     <h1 class="title" id="main-title">
         <a class="logo">
-            Tongwen Li's Website
+            <font color = "#2B8CE3">Tongwen Li's Website</font>
         </a>
     </h1>
     <h2 class="desc">
@@ -2042,10 +2042,10 @@
             <section class="aside-section">
                 <h1><image width = "128" src="ltw.jpg"/></h1>
 				<ul class="category-list">
-				<li><a>Tongwen Li, Assistant Professor</a></li>
-				<li><a>Sun Yat-Sen University</a></li>
-				<li><a>Zhuhai Campus of Sun Yat-Sen University, Zhuhai, China</a></li>
-				<li><a>Email: litw8@mail.sysu.edu.cn</a></li>
+				<li><a><font color = "#2B8CE3">Tongwen Li, Assistant Professor</font></a></li>
+				<li><a><font color = "#2B8CE3">Sun Yat-Sen University</font></a></li>
+				<li><a><font color = "#2B8CE3">Zhuhai Campus of Sun Yat-Sen University, Zhuhai, China</font></a></li>
+				<li><a><font color = "#2B8CE3">Email: litw8@mail.sysu.edu.cn</font></a></li>
 				</ul>
 
             </section>
