--- a/paper.html
+++ b/paper.html
@@ -2004,6 +2004,8 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
+<li><p>Wang, Y., Yuan, Q., <strong>Li T.</strong>, Zhu, L., Zhang, L., 2021. Estimating daily full-coverage near surface O3, CO, and NO2 concentrations at a high spatial resolution over China based on S5P-TROPOMI and GEOS-FP. <em>ISPRS Journal of Photogrammetry and Remote Sensing</em>, 175, 311-325. <a href='https://doi.org/10.1016/j.isprsjprs.2021.03.018' target='_blank' class='url'>https://doi.org/10.1016/j.isprsjprs.2021.03.018</a> <strong>(SCI Q1, TOP)</strong></p>
+</li>
 <li><p>Wang, B., Yuan, Q., Yang, Q., Zhu, L., <strong>Li T.</strong>, Zhang, L., 2021. Estimate hourly PM2.5 concentrations from Himawari-8 TOA reflectance directly using geo-intelligent long short-term memory network. <em>Environmental Pollution</em>, 271, 116327. <a href='https://doi.org/10.1016/j.envpol.2020.116327' target='_blank' class='url'>https://doi.org/10.1016/j.envpol.2020.116327</a> <strong>(SCI, TOP)</strong></p>
 </li>
 <li><p>Zhang, X., Shen, H., <strong>Li T.</strong>, Zhang, L., 2020, The Effects of Fireworks Discharge on Atmospheric PM2.5 Concentration in the Chinese Lunar New Year. <em>International Journal of Environmental Research and Public Health</em>, 17. <a href='https://doi.org/10.3390/ijerph17249333' target='_blank' class='url'>https://doi.org/10.3390/ijerph17249333</a> <strong>(SCI)</strong></p>
