Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2042,6 +2042,7 @@
 <li><p>Information Sciences</p></li>
 <li><p>Environmental Engineering and Management Journal</p></li>
 <li><p>Environmental Research</p></li>
+<li><p>Scientia Iranica</p></li>
 </ul>
     </div>
 </article>
