--- a/paper.html
+++ b/paper.html
@@ -2004,6 +2004,10 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
+<li><p><strong>Li, T.</strong>, Shen, H., Yuan, Q., Zhang, L., 2021. A Locally Weighted Neural Network Constrained by Global Training for Remote Sensing Estimation of PM2.5. <em>IEEE Transactions on Geoscience and Remote Sensing</em>, Accepted. <strong>(SCI Q1, TOP)</strong></p>
+</li>
+<li><p><strong>Li, T.</strong>, Cheng, X., 2021. Estimating daily full-coverage surface ozone concentration using satellite observations and a spatiotemporally embedded deep learning approach. <em>International Journal of Applied Earth Observation and Geoinformation</em>, 101, 102356. <a href='https://doi.org/10.1016/j.jag.2021.102356' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2021.102356</a> <strong>(SCI Q1, TOP)</strong></p>
+</li>
 <li><p>Wang, Y., Yuan, Q., <strong>Li T.</strong>, Zhu, L., Zhang, L., 2021. Estimating daily full-coverage near surface O3, CO, and NO2 concentrations at a high spatial resolution over China based on S5P-TROPOMI and GEOS-FP. <em>ISPRS Journal of Photogrammetry and Remote Sensing</em>, 175, 311-325. <a href='https://doi.org/10.1016/j.isprsjprs.2021.03.018' target='_blank' class='url'>https://doi.org/10.1016/j.isprsjprs.2021.03.018</a> <strong>(SCI Q1, TOP)</strong></p>
 </li>
 <li><p>Wang, B., Yuan, Q., Yang, Q., Zhu, L., <strong>Li T.</strong>, Zhang, L., 2021. Estimate hourly PM2.5 concentrations from Himawari-8 TOA reflectance directly using geo-intelligent long short-term memory network. <em>Environmental Pollution</em>, 271, 116327. <a href='https://doi.org/10.1016/j.envpol.2020.116327' target='_blank' class='url'>https://doi.org/10.1016/j.envpol.2020.116327</a> <strong>(SCI, TOP)</strong></p>
