Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2004,7 +2004,7 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
-<li><p><strong>Li, T.</strong>, Shen, H., Yuan, Q., Zhang, L., 2021. A Locally Weighted Neural Network Constrained by Global Training for Remote Sensing Estimation of PM2.5. <em>IEEE Transactions on Geoscience and Remote Sensing</em>, Accepted. <strong>(SCI Q1, TOP)</strong></p>
+<li><p><strong>Li, T.</strong>, Shen, H., Yuan, Q., Zhang, L., 2021. A Locally Weighted Neural Network Constrained by Global Training for Remote Sensing Estimation of PM2.5. <em>IEEE Transactions on Geoscience and Remote Sensing</em>, Accepted. <strong>(SCI, TOP)</strong></p>
 </li>
 <li><p><strong>Li, T.</strong>, Cheng, X., 2021. Estimating daily full-coverage surface ozone concentration using satellite observations and a spatiotemporally embedded deep learning approach. <em>International Journal of Applied Earth Observation and Geoinformation</em>, 101, 102356. <a href='https://doi.org/10.1016/j.jag.2021.102356' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2021.102356</a> <strong>(SCI Q1, TOP)</strong></p>
 </li>
