--- a/paper.html
+++ b/paper.html
@@ -2004,9 +2004,9 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
-<li><p><strong>Li, T.</strong>, Shen, H., Yuan, Q., Zhang, L., 2021. A Locally Weighted Neural Network Constrained by Global Training for Remote Sensing Estimation of PM2.5. <em>IEEE Transactions on Geoscience and Remote Sensing</em>. <a href='https://doi.org/10.1109/TGRS.2021.3074569' target='_blank' class='url'>https://doi.org/10.1109/TGRS.2021.3074569</a> <strong>(SCI, TOP)</strong></p>
+<li><p><strong>Li, T.</strong>, Shen, H., Yuan, Q., Zhang, L., 2021. A Locally Weighted Neural Network Constrained by Global Training for Remote Sensing Estimation of PM2.5. <em>IEEE Transactions on Geoscience and Remote Sensing</em>. <a href='https://doi.org/10.1109/TGRS.2021.3074569' target='_blank' class='url'>https://doi.org/10.1109/TGRS.2021.3074569</a> <strong>(SCI, TOP, First author)</strong></p>
 </li>
-<li><p><strong>Li, T.</strong>, Cheng, X., 2021. Estimating daily full-coverage surface ozone concentration using satellite observations and a spatiotemporally embedded deep learning approach. <em>International Journal of Applied Earth Observation and Geoinformation</em>, 101, 102356. <a href='https://doi.org/10.1016/j.jag.2021.102356' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2021.102356</a> <strong>(SCI Q1, TOP)</strong></p>
+<li><p><strong>Li, T.</strong>, Cheng, X., 2021. Estimating daily full-coverage surface ozone concentration using satellite observations and a spatiotemporally embedded deep learning approach. <em>International Journal of Applied Earth Observation and Geoinformation</em>, 101, 102356. <a href='https://doi.org/10.1016/j.jag.2021.102356' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2021.102356</a> <strong>(SCI Q1, TOP, First author)</strong></p>
 </li>
 <li><p>Wang, Y., Yuan, Q., <strong>Li T.</strong>, Zhu, L., Zhang, L., 2021. Estimating daily full-coverage near surface O3, CO, and NO2 concentrations at a high spatial resolution over China based on S5P-TROPOMI and GEOS-FP. <em>ISPRS Journal of Photogrammetry and Remote Sensing</em>, 175, 311-325. <a href='https://doi.org/10.1016/j.isprsjprs.2021.03.018' target='_blank' class='url'>https://doi.org/10.1016/j.isprsjprs.2021.03.018</a> <strong>(SCI Q1, TOP)</strong></p>
 </li>
