Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2044,6 +2044,7 @@
 <li><p>Environmental Research</p></li>
 <li><p>Scientia Iranica</p></li>
 <li><p>Physics and Chemistry of the Earth</p></li>
+<li><p>International Journal of Digital Earth</p></li>
 </ul>
     </div>
 </article>
