Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2046,6 +2046,7 @@
 <li><p>Physics and Chemistry of the Earth</p></li>
 <li><p>International Journal of Digital Earth</p></li>
 <li><p>International Journal of Applied Earth Observations and Geoinformation</p></li>
+<li><p>Measurement</p></li>
 
 </ul>
     </div>
