--- a/index.html
+++ b/index.html
@@ -2047,6 +2047,7 @@
 <li><p>International Journal of Digital Earth</p></li>
 <li><p>International Journal of Applied Earth Observations and Geoinformation</p></li>
 <li><p>Measurement</p></li>
+<li><p>IEEE Access</p></li>
 
 </ul>
     </div>
