Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2048,7 +2048,7 @@
 <li><p>International Journal of Applied Earth Observations and Geoinformation</p></li>
 <li><p>Measurement</p></li>
 <li><p>IEEE Access</p></li>
-
+<li><p>Sensors</p></li>
 </ul>
     </div>
 </article>
