Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2049,6 +2049,7 @@
 <li><p>Measurement</p></li>
 <li><p>IEEE Access</p></li>
 <li><p>Sensors</p></li>
+<li><p>Atmospheric Pollution Research</p></li>
 </ul>
     </div>
 </article>
