Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2050,6 +2050,7 @@
 <li><p>IEEE Access</p></li>
 <li><p>Sensors</p></li>
 <li><p>Atmospheric Pollution Research</p></li>
+<li><p>Sustainability</p></li>
 </ul>
     </div>
 </article>
