Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2004,6 +2004,8 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
+<li><p>Wu, J., <strong>Li, T.</strong>, Zhang, C., Cheng, Q., Shen, H., 2021. Hourly PM2.5 Concentration Monitoring With Spatiotemporal Continuity by the Fusion of Satellite and Station Observations. <em>IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</em>. <a href='https://doi.org/10.1109/jstars.2021.3103020' target='_blank' class='url'>https://doi.org/10.1109/jstars.2021.3103020</a> <strong>(SCI)</strong></p>
+</li>
 <li><p><strong>Li, T.</strong>, Shen, H., Yuan, Q., Zhang, L., 2021. A Locally Weighted Neural Network Constrained by Global Training for Remote Sensing Estimation of PM2.5. <em>IEEE Transactions on Geoscience and Remote Sensing</em>. <a href='https://doi.org/10.1109/TGRS.2021.3074569' target='_blank' class='url'>https://doi.org/10.1109/TGRS.2021.3074569</a> <strong>(SCI, TOP, First author)</strong></p>
 </li>
 <li><p><strong>Li, T.</strong>, Cheng, X., 2021. Estimating daily full-coverage surface ozone concentration using satellite observations and a spatiotemporally embedded deep learning approach. <em>International Journal of Applied Earth Observation and Geoinformation</em>, 101, 102356. <a href='https://doi.org/10.1016/j.jag.2021.102356' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2021.102356</a> <strong>(SCI Q1, TOP, First author)</strong></p>
