--- a/paper.html
+++ b/paper.html
@@ -2068,6 +2068,10 @@
 </li>
 <li><p><strong>Li T.</strong>, Shen, H., Zeng, C., Yuan, Q., Zhang, L., 2017. Point-surface fusion of station measurements and satellite observations for mapping PM2.5 distribution in China: Methods and assessment. <em>Atmospheric Environment</em>, 152, 477-489. <a href='http://dx.doi.org/10.1016/j.atmosenv.2017.01.004' target='_blank' class='url'>http://dx.doi.org/10.1016/j.atmosenv.2017.01.004</a> <strong>(SCI, TOP, First author)</strong></p>
 </li>
+<li><p>杨倩倩, 靳才溢, <strong>李同文</strong>, 袁强强, 沈焕锋, 张良培, 2021. 数据驱动的定量遥感研究进展与挑战. <em>遥感学报</em>. <a href='http://www.ygxb.ac.cn/thesisDetails#10.11834/jrs.20211410' target='_blank' class='url'>http://www.ygxb.ac.cn/thesisDetails#10.11834/jrs.20211410</a> <strong>(EI)</strong>(in Chinese)</p> 
+</li>
+<li><p>江芸, <strong>李同文</strong>, 程青, 沈焕锋, 2021. 利用时空神经网络模型的长江经济带气温反演. <em>武汉大学学报(信息科学版)</em>, 1-10. <a href='http://ch.whu.edu.cn/cn/article/doi/10.13203/j.whugis20210192' target='_blank' class='url'>http://ch.whu.edu.cn/cn/article/doi/10.13203/j.whugis20210192</a> <strong>(EI)</strong>(in Chinese)</p> 
+</li>
 <li><p>沈焕锋, <strong>李同文</strong>, 2019. 大气PM2.5遥感制图研究进展. <em>测绘学报</em>, 48, 1624. <a href='http://xb.sinomaps.com/CN/10.11947/j.AGCS.2019.20190456' target='_blank' class='url'>http://xb.sinomaps.com/CN/10.11947/j.AGCS.2019.20190456</a> <strong>(EI, Corresponding author)</strong>(in Chinese)</p> 
 </li>
 </ul>
@@ -2099,6 +2103,8 @@
 <li><p>沈焕锋，李同文. 一种结合卫星和站点观测反演时空连续PM2.5浓度的方法，授权号：ZL201510849327.0. 授权时间：2018.01</p> 
 </li>
 <li><p>沈焕锋，周曼，李同文，袁强强. 一种结合遥感数据与社会感知数据的PM2.5深度学习反演方法. 申请号：201910451339.6.</p> 
+</li>
+<li><p>李同文，阴顺超，程晓，吴金橄，王天星.一种粒子直径约束的PM2.5深度学习遥感估算方法. 申请号：202111340135.9.</p> 
 </li>
 </ul>
 
