--- a/index.html
+++ b/index.html
@@ -2053,6 +2053,7 @@
 <li><p>19. Sustainability</p></li>
 <li><p>20. Atmosphere</p></li>
 <li><p>21. Agronomy</p></li>
+<li><p>22. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</p></li>
 </ul>
     </div>
 </article>
