--- a/index.html
+++ b/index.html
@@ -2054,6 +2054,7 @@
 <li><p>20. Atmosphere</p></li>
 <li><p>21. Agronomy</p></li>
 <li><p>22. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</p></li>
+<li><p>23. Atmospheric Environment: X</p></li>
 </ul>
     </div>
 </article>
