Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2055,6 +2055,7 @@
 <li><p>21. Agronomy</p></li>
 <li><p>22. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</p></li>
 <li><p>23. Atmospheric Environment: X</p></li>
+<li><p>24. Science of Remote Sensing</p></li>
 </ul>
     </div>
 </article>
