Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/project.html
+++ b/project.html
@@ -1985,6 +1985,7 @@
     <div class="links">
         <ul>
            <li><a href = "index.html">Biography</a></li><li><a href = "news.html">News</a></li>
+			· <li><a href = "teaching.html">Teaching</a></li>
 			· <li><a href = "paper.html">Publication</a></li>
 			· <li><a href = "award.html">Award</a></li>
 			· <li><a href = "project.html">Project</a></li>
