--- a/award.html
+++ b/award.html
@@ -1985,6 +1985,7 @@
     <div class="links">
         <ul>
             <li><a href = "index.html">Biography</a></li><li><a href = "news.html">News</a></li>
+			· <li><a href = "teaching.html">Teaching</a></li>
 			· <li><a href = "paper.html">Publication</a></li>
 			· <li><a href = "award.html">Award</a></li>
 			· <li><a href = "project.html">Project</a></li>
@@ -2010,11 +2011,6 @@
 <p><strong>Teaching awards</strong></p>
 <ul>
 <li><p>中山大学测绘科学与技术学院青年教师讲课比赛一等奖[2020.11]</p></li>
-</ul>
-
-<p><strong>Student awards</strong></p>
-<ul>
-<li><p>“政务关注”省级社会调研大赛之第四届公共治理数据分析大赛暨第二届城市管理案例创新大赛，优胜奖，联合指导老师[2020.12]</p></li>
 </ul>
 
 <p><strong>Other awards</strong></p>
