--- a/index.html
+++ b/index.html
@@ -2001,18 +2001,14 @@
 
 <p><strong>Personal Information</strong></p>
 <ul>
-<li><p>Tongwen Li, Assistant Professor</p></li>
-<li><p>School of Geospatial Engineering and Science, Sun Yat-Sen University</p></li>
-<li><p>Address: Zhuhai Campus of Sun Yat-Sen University, Zhuhai, China</p></li>
-<li><p>Email: litw8@mail.sysu.edu.cn</p></li>
+<li><p>Tongwen Li, Assistant Professor at School of Geospatial Engineering and Science, Sun Yat-Sen University. He is major in remote sensing of atmospheric environment. He innovatively developed remote sensing estimation methods of atmospheric environment that combined geographical law and machine learning, and proposed missing data reconstruction method based on multi-source information fusion. He has published more than 20 SCI papers, 10 of which have been published as the first and corresponding author in <i>GRL, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals (8 papers are published CAS Q1 and Q2 TOP journals). All papers were cited for >1200 times, among which 3 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper and also selected into the list of "100 most influential International academic papers of China in 2020" released by the Institute of Scientific and Technical Information of China). He achieved 1 software copyright and applied/authorized 3 patents. He is invited to be the guest editor of <i>Atmosphere</i>, and organized the special issue of “<i>Remote Sensing Applications in Particulate Matter</i>”; he also is invited as a reviewer for more than 20 international journals.
+</p></li>
 </ul>
-
 
 <p><strong>Employment</strong>
 <ul>
 <li><p>2020.09-now, Assistant Professor, Sun Yat-Sen University</p></li>
 </ul>
-
 
 <p><strong>Education</strong></p>
 <ul>
@@ -2031,33 +2027,6 @@
 </ul>
 
 
-<p><strong>Journal Reviewers</strong></p>
-<ul>
-<li><p>1. Journal of Cleaner Production</p></li>
-<li><p>2. Journal of Environmental Management</p></li>
-<li><p>3. Science of the Total Environment</p></li>
-<li><p>4. Scientific Reports</p></li>
-<li><p>5. Journal of the Air & Waste Management Association</p></li>
-<li><p>6. IEEE Transactions on Geoscience and Remote Sensing</p></li>
-<li><p>7. Applied Geography</p></li>
-<li><p>8. Information Sciences</p></li>
-<li><p>9. Environmental Engineering and Management Journal</p></li>
-<li><p>10. Environmental Research</p></li>
-<li><p>11. Scientia Iranica</p></li>
-<li><p>12. Physics and Chemistry of the Earth</p></li>
-<li><p>13. International Journal of Digital Earth</p></li>
-<li><p>14. International Journal of Applied Earth Observations and Geoinformation</p></li>
-<li><p>15. Measurement</p></li>
-<li><p>16. IEEE Access</p></li>
-<li><p>17. Sensors</p></li>
-<li><p>18. Atmospheric Pollution Research</p></li>
-<li><p>19. Sustainability</p></li>
-<li><p>20. Atmosphere</p></li>
-<li><p>21. Agronomy</p></li>
-<li><p>22. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</p></li>
-<li><p>23. Atmospheric Environment: X</p></li>
-<li><p>24. Science of Remote Sensing</p></li>
-</ul>
     </div>
 </article>
 
