Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2005,6 +2005,12 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
+<li><p>Wang, Y., Yuan, Q., <strong>Li, T.</strong>, Zhu, L., 2022. Global spatiotemporal estimation of daily high-resolution surface carbon monoxide concentrations using Deep Forest. <em>Journal of Cleaner Production</em>, 350, 131500. <a href='https://doi.org/10.1016/j.jclepro.2022.131500' target='_blank' class='url'>https://doi.org/10.1016/j.jclepro.2022.131500</a> <strong>(SCI)</strong></p>
+</li>
+<li><p>Hu, Y., Zeng, C., <strong>Li, T.</strong>, Shen, H., 2022. Performance comparison of Fengyun-4A and Himawari-8 in PM2.5 estimation in China. <em>Atmospheric Environment</em>, 271, 118898. <a href='https://doi.org/10.1016/j.atmosenv.2021.118898' target='_blank' class='url'>https://doi.org/10.1016/j.atmosenv.2021.118898</a> <strong>(SCI)</strong></p>
+</li>
+<li><p>Jin, C., Wang, Y., <strong>Li, T.</strong>, Yuan, Q., 2022. Global validation and hybrid calibration of CAMS and MERRA-2 PM2.5 reanalysis products based on OpenAQ platform. <em>Atmospheric Environment</em>, 274, 118972. <a href='https://doi.org/10.1016/j.atmosenv.2022.118972' target='_blank' class='url'>https://doi.org/10.1016/j.atmosenv.2022.118972</a> <strong>(SCI)</strong></p>
+</li>
 <li><p>Wu, J., <strong>Li, T.</strong>, Zhang, C., Cheng, Q., Shen, H., 2021. Hourly PM2.5 Concentration Monitoring With Spatiotemporal Continuity by the Fusion of Satellite and Station Observations. <em>IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</em>. <a href='https://doi.org/10.1109/jstars.2021.3103020' target='_blank' class='url'>https://doi.org/10.1109/jstars.2021.3103020</a> <strong>(SCI)</strong></p>
 </li>
 <li><p><strong>Li, T.</strong>, Shen, H., Yuan, Q., Zhang, L., 2021. A Locally Weighted Neural Network Constrained by Global Training for Remote Sensing Estimation of PM2.5. <em>IEEE Transactions on Geoscience and Remote Sensing</em>. <a href='https://doi.org/10.1109/TGRS.2021.3074569' target='_blank' class='url'>https://doi.org/10.1109/TGRS.2021.3074569</a> <strong>(SCI, TOP, First author)</strong></p>
@@ -2061,13 +2067,13 @@
 </li>
 <li><p>Xu, H., Yuan, Q., <strong>Li T.</strong>, Shen, H., Zhang, L., Jiang, H., 2018. Quality Improvement of Satellite Soil Moisture Products by Fusing with In-Situ Measurements and GNSS-R Estimates in the Western Continental U.S. <em>Remote Sensing</em>, 10. <a href='https://doi.org/10.3390/rs10091351' target='_blank' class='url'>https://doi.org/10.3390/rs10091351</a> <strong>(SCI)</strong></p>
 </li>
-<li><p>Yuan, M., Huang, Y., Shen, H., <strong>Li T.</strong>, 2018. Effects of urban form on haze pollution in China: Spatial regression analysis based on PM2.5 remote sensing data. <em>Applied Geography</em>, 98, 215-223. <a href='https://doi.org/10.1016/j.apgeog.2018.07.018' target='_blank' class='url'>https://doi.org/10.1016/j.apgeog.2018.07.018</a> <strong>(SSCI)</strong></p>
+<li><p>Yuan, M., Huang, Y., Shen, H., <strong>Li T.</strong>, 2018. Effects of urban form on haze pollution in China: Spatial regression analysis based on PM2.5 remote sensing data. <em>Applied Geography</em>, 98, 215-223. <a href='https://doi.org/10.1016/j.apgeog.2018.07.018' target='_blank' class='url'>https://doi.org/10.1016/j.apgeog.2018.07.018</a> <strong>(SSCI, ESI Highly Cited Paper)</strong></p>
 </li>
-<li><p><strong>Li T.</strong>, Shen, H., Yuan, Q., Zhang, X., Zhang, L., 2017. Estimating Ground-Level PM2.5 by Fusing Satellite and Station Observations: A Geo-Intelligent Deep Learning Approach. <em>Geophysical Research Letters</em>, 44, 11,985-11,993. <a href='https://doi.org/10.1002/2017gl075710' target='_blank' class='url'>https://doi.org/10.1002/2017gl075710</a> <strong>(SCI Q1, TOP, First author)</strong></p>
+<li><p><strong>Li T.</strong>, Shen, H., Yuan, Q., Zhang, X., Zhang, L., 2017. Estimating Ground-Level PM2.5 by Fusing Satellite and Station Observations: A Geo-Intelligent Deep Learning Approach. <em>Geophysical Research Letters</em>, 44, 11,985-11,993. <a href='https://doi.org/10.1002/2017gl075710' target='_blank' class='url'>https://doi.org/10.1002/2017gl075710</a> <strong>(SCI Q1, TOP, First author, ESI Highly Cited Paper)</strong></p>
 </li>
 <li><p>Yang, Q., Yuan, Q., <strong>Li T.</strong>, Shen, H., Zhang, L., 2017. The Relationships between PM2.5 and Meteorological Factors in China: Seasonal and Regional Variations. <em>International Journal of Environmental Research and Public Health</em>, 14. <a href='https://doi.org/10.3390/ijerph14121510' target='_blank' class='url'>https://doi.org/10.3390/ijerph14121510</a> <strong>(SCI)</strong></p>
 </li>
-<li><p><strong>Li T.</strong>, Shen, H., Zeng, C., Yuan, Q., Zhang, L., 2017. Point-surface fusion of station measurements and satellite observations for mapping PM2.5 distribution in China: Methods and assessment. <em>Atmospheric Environment</em>, 152, 477-489. <a href='http://dx.doi.org/10.1016/j.atmosenv.2017.01.004' target='_blank' class='url'>http://dx.doi.org/10.1016/j.atmosenv.2017.01.004</a> <strong>(SCI, TOP, First author)</strong></p>
+<li><p><strong>Li T.</strong>, Shen, H., Zeng, C., Yuan, Q., Zhang, L., 2017. Point-surface fusion of station measurements and satellite observations for mapping PM2.5 distribution in China: Methods and assessment. <em>Atmospheric Environment</em>, 152, 477-489. <a href='http://dx.doi.org/10.1016/j.atmosenv.2017.01.004' target='_blank' class='url'>http://dx.doi.org/10.1016/j.atmosenv.2017.01.004</a> <strong>(SCI, TOP, First author, ESI Highly Cited Paper)</strong></p>
 </li>
 <li><p>杨倩倩, 靳才溢, <strong>李同文</strong>, 袁强强, 沈焕锋, 张良培, 2021. 数据驱动的定量遥感研究进展与挑战. <em>遥感学报</em>. <a href='http://www.ygxb.ac.cn/thesisDetails#10.11834/jrs.20211410' target='_blank' class='url'>http://www.ygxb.ac.cn/thesisDetails#10.11834/jrs.20211410</a> <strong>(EI)</strong>(in Chinese)</p> 
 </li>
