Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/teaching.html
+++ b/teaching.html
@@ -2017,8 +2017,8 @@
 
 <p><strong>Student project</strong></p>
 <ul>
-<li><p>[1]2021，陈戴荣，基于时空关联深度学习的大湾区臭氧预报研究，院级大创项目</p></li>
-<li><p>[2]2022，邱辉，基于深度学习的林草火点遥感检测方法研究，国家级大创项目</p></li>
+<li><p>[1]2021，陈戴荣等，基于时空关联深度学习的大湾区臭氧预报研究，院级大创项目</p></li>
+<li><p>[2]2022，邱辉等，基于深度学习的林草火点遥感检测方法研究，国家级大创项目</p></li>
 </ul>
 
     </div>
