Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/project.html
+++ b/project.html
@@ -2008,6 +2008,7 @@
 <li>[3]中山大学“百人计划”人才启动经费项目，2021-2023，主持</li>
 <li>[4]资源与环境信息系统国家重点实验室开放基金，静止与极轨卫星联合的高分辨率大气PM2.5反演技术，2020.12-2022.12，主持</li>
 <li>[5]技术服务横向项目，时空大数据支持的长江经济带大气PM2.5连续动态监测技术，2021.3-2021.12,主持</li>
+<li>[6]国家重点研发课题，**,参与</li>
 </ul>
     </div>
 </article>
