Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/award.html
+++ b/award.html
@@ -2010,6 +2010,7 @@
 
 <p><strong>Teaching awards</strong></p>
 <ul>
+<li><p>中山大学第十届教学竞赛，学院二等奖[2022.05]</p></li>
 <li><p>中山大学测绘科学与技术学院青年教师讲课比赛一等奖[2020.11]</p></li>
 </ul>
 
