--- a/index.html
+++ b/index.html
@@ -2001,8 +2001,18 @@
 
 <p><strong>Personal Information</strong></p>
 <ul>
-<p>Tongwen Li, Assistant Professor at School of Geospatial Engineering and Science, Sun Yat-Sen University. He is mainly engaged in remote sensing of atmospheric environment. He innovatively developed remote sensing estimation methods of atmospheric environment that combined geographical law and machine learning, and proposed missing data reconstruction methods based on multi-source information fusion. He has published more than 20 SCI papers, 10 of which have been published as the first and corresponding author in <i>GRL, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals (8 papers are published in CAS Q1 and Q2 TOP journals). All papers were cited for >1600 times, among which 4 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper and also selected into the list of "100 most influential International academic papers of China in 2020" released by the Institute of Scientific and Technical Information of China). He achieved 1 software copyright and applied/authorized 3 patents. He is invited to be the guest editor of <i>Atmosphere</i>, and organized the special issue of “<i>Remote Sensing Applications in Particulate Matter</i>”; he is also invited as a reviewer for more than 30 international journals.
-</p>
+<li><p><b>Tongwen Li</b>, Assistant Professor at School of Geospatial Engineering and Science, Sun Yat-Sen University. 
+</p></li>
+<li><p>He is mainly engaged in remote sensing of atmospheric environment. He innovatively developed remote sensing estimation methods of atmospheric environment that combined geographical law and machine learning, and proposed missing data reconstruction methods based on multi-source information fusion.
+</p></li>
+<li><p>He has published more than 20 SCI papers, 10 of which have been published as the first and corresponding author in <i>GRL, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals (8 papers are published in CAS Q1 and Q2 TOP journals).
+</p></li>
+<li><p>All papers were cited for >1800 times, among which 4 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper and also selected into the list of "100 most influential International academic papers of China in 2020" released by the Institute of Scientific and Technical Information of China).
+</p></li>
+<li><p>He achieved 1 software copyright and applied/authorized 3 patents.
+</p></li>
+<li><p>He was invited to be the Associate Editor of <i>Frontiers in Remote Sensing</i>, the guest editor of <i>Frontiers in Environmental Science</i> and <i>Atmosphere</i>; he was also invited as a reviewer for more than 30 international journals.
+</p></li>
 </ul>
 
 <p><strong>Employment</strong>
