Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2005,8 +2005,14 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
+<li><p>Yin, S., <strong>Li, T.</strong>, Cheng, X., Wu, J., 2022. Remote sensing estimation of surface PM2.5 concentrations using a deep learning model improved by data augmentation and a particle size constraint.<em>Atmospheric Environment</em>, 287, 119282. <a href='https://doi.org/10.1016/j.atmosenv.2022.119282' target='_blank' class='url'>https://doi.org/10.1016/j.atmosenv.2022.119282</a> <strong>(SCI,TOP, Corresponding author)</strong></p>
+
+<li><p><strong>Li, T.</strong>, Wu, J., Chen, J., Shen, H., 2022. An Enhanced Geographically and Temporally Weighted Neural Network for Remote Sensing Estimation of Surface Ozone.  <em>IEEE Transactions on Geoscience and Remote Sensing</em>, 60, 1-13. <a href='https://doi.org/10.1109/TGRS.2022.3187095' target='_blank' class='url'>https://doi.org/10.1109/TGRS.2022.3187095</a> <strong>(SCI,TOP, First author)</strong></p>
+</li>
+
 <li><p>Wang, Y., Yuan, Q., <strong>Li, T.</strong>, Zhu, L., 2022. Global spatiotemporal estimation of daily high-resolution surface carbon monoxide concentrations using Deep Forest. <em>Journal of Cleaner Production</em>, 350, 131500. <a href='https://doi.org/10.1016/j.jclepro.2022.131500' target='_blank' class='url'>https://doi.org/10.1016/j.jclepro.2022.131500</a> <strong>(SCI)</strong></p>
 </li>
+
 <li><p>Hu, Y., Zeng, C., <strong>Li, T.</strong>, Shen, H., 2022. Performance comparison of Fengyun-4A and Himawari-8 in PM2.5 estimation in China. <em>Atmospheric Environment</em>, 271, 118898. <a href='https://doi.org/10.1016/j.atmosenv.2021.118898' target='_blank' class='url'>https://doi.org/10.1016/j.atmosenv.2021.118898</a> <strong>(SCI)</strong></p>
 </li>
 <li><p>Jin, C., Wang, Y., <strong>Li, T.</strong>, Yuan, Q., 2022. Global validation and hybrid calibration of CAMS and MERRA-2 PM2.5 reanalysis products based on OpenAQ platform. <em>Atmospheric Environment</em>, 274, 118972. <a href='https://doi.org/10.1016/j.atmosenv.2022.118972' target='_blank' class='url'>https://doi.org/10.1016/j.atmosenv.2022.118972</a> <strong>(SCI)</strong></p>
