Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2119,6 +2119,8 @@
 </li>
 <li><p>李同文，阴顺超，程晓，吴金橄，王天星.一种粒子直径约束的PM2.5深度学习遥感估算方法. 申请号：202111340135.9.</p> 
 </li>
+<li><p>李同文，张岭峰，吴金橄.一种全局-局部建模结合的卫星CO2浓度缺失信息重建方法. 申请号：202211258374.4.</p> 
+</li>
 </ul>
 
 <p><strong>   4. Software Copyright</strong> (in Chinese)</p>
