Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2005,6 +2005,11 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
+
+<li><p><strong>Li, T.</strong>, Yang, Q., Wang, Y., Wu, J., 2022. Joint estimation of PM2.5 and O3 over China using a knowledge-informed neural network.<em>Geoscience Frontiers</em>, 101499. <a href='https://doi.org/10.1016/j.gsf.2022.101499' target='_blank' class='url'>https://doi.org/10.1016/j.gsf.2022.101499</a> <strong>(SCI,TOP, First and Corresponding author)</strong></p>
+
+<li><p>Zhang, L., <strong>Li, T.</strong>, Wu, J., 2022. Deriving gapless CO2 concentrations using a geographically weighted neural network: China, 2014–2020.<em>International Journal of Applied Earth Observation and Geoinformation</em>, 114, 103063. <a href='https://doi.org/10.1016/j.jag.2022.103063' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2022.103063</a> <strong>(SCI,TOP, Corresponding author)</strong></p>
+
 <li><p>Yin, S., <strong>Li, T.</strong>, Cheng, X., Wu, J., 2022. Remote sensing estimation of surface PM2.5 concentrations using a deep learning model improved by data augmentation and a particle size constraint.<em>Atmospheric Environment</em>, 287, 119282. <a href='https://doi.org/10.1016/j.atmosenv.2022.119282' target='_blank' class='url'>https://doi.org/10.1016/j.atmosenv.2022.119282</a> <strong>(SCI,TOP, Corresponding author)</strong></p>
 
 <li><p><strong>Li, T.</strong>, Wu, J., Chen, J., Shen, H., 2022. An Enhanced Geographically and Temporally Weighted Neural Network for Remote Sensing Estimation of Surface Ozone.  <em>IEEE Transactions on Geoscience and Remote Sensing</em>, 60, 1-13. <a href='https://doi.org/10.1109/TGRS.2022.3187095' target='_blank' class='url'>https://doi.org/10.1109/TGRS.2022.3187095</a> <strong>(SCI,TOP, First author)</strong></p>
