--- a/index.html
+++ b/index.html
@@ -1984,7 +1984,7 @@
 
     <div class="links">
         <ul>
-            <li><a href = "index.html">Biography</a></li><li><a href = "news.html">News</a></li>
+            <li><a href = "index.html">Biography</a></li>
 			· <li><a href = "teaching.html">Teaching</a></li>
 			· <li><a href = "paper.html">Publication</a></li>
 			· <li><a href = "award.html">Award</a></li>
@@ -2005,24 +2005,17 @@ Tongwen Li, Assistant Professor at School of Geospatial Engineering and Science,
 </p></li>
 
 <li><p>
-He is mainly engaged in remote sensing of atmospheric environment. He innovatively developed remote sensing estimation methods of atmospheric environment that combined geographical law and machine learning, and proposed missing data reconstruction methods based on multi-source information fusion.
+He is mainly engaged in remote sensing of atmospheric environment. He innovatively developed remote sensing estimation methods of atmospheric environment that combined geographical/physical laws and machine learning, and proposed missing data reconstruction methods based on multi-source information fusion.
 </p></li>
 
 <li><p>
-He has published more than 20 SCI papers, 10 of which have been published as the first and corresponding author in <i>GRL, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals (8 papers are published in CAS Q1 and Q2 TOP journals).
+He has published more than 40 SCI papers, 17 of which have been published as the first or corresponding author in <i>GRL, GMD, EI, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals (12 papers in CAS Q1 journals).
 </p></li>
 
 <li><p>
-All papers were cited for >1800 times, among which 4 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper and also selected into the list of "100 most influential International academic papers of China in 2020" released by the Institute of Scientific and Technical Information of China).
+All papers were cited for >2700 times, among which 7 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper and also selected into the list of "100 most influential International academic papers of China in 2020" released by the Institute of Scientific and Technical Information of China).
 </p></li>
 
-<li><p>
-He achieved 1 software copyright and applied/authorized 3 patents.
-</p></li>
-
-<li><p>
-He was invited to be the Associate Editor of <i>Frontiers in Remote Sensing</i>, the guest editor of <i>Frontiers in Environmental Science</i> and <i>Atmosphere</i>; he was also invited as a reviewer for more than 30 international journals.
-</p></li>
 </ul>
 
 <p><strong>Employment</strong>
@@ -2043,6 +2036,15 @@ He was invited to be the Associate Editor of <i>Frontiers in Remote Sensing</i>,
 <li><p>Remote sensing information processing and application</p></li>
 <li><p>Air pollution</p></li>
 <li><p>Data fusion</p></li>
+</ul>
+
+
+<p><strong>Editorial Board</strong></p>
+<ul>
+<li><p><i>Frontiers in Remote Sensing</i>, Associate Editor</p></li>
+<li><p><i>Frontiers in Environmental Science</i>, Guest Editor</p></li>
+<li><p><i>Atmosphere</i>, Guest Editor</p></li>
+<li><p><i>Journal of Geography and Cartography</i>,Editorial Board</p></li>
 </ul>
 
 
