--- a/teaching.html
+++ b/teaching.html
@@ -2010,15 +2010,24 @@
 <li><p>研究生：机器学习原理/机器学习技术与应用</p></li>
 </ul>
 
+<p><strong>Teaching awards (in Chinese)</strong></p>
+<ul>
+<li><p>[1]中山大学测绘科学与技术学院“中山大学第十届教师教学竞赛”初赛二等奖（2022）</p></li>
+<li><p>[2]中山大学测绘科学与技术学院青年教师讲课比赛一等奖（2020）</p></li>
+</ul>
+
+
 <p><strong>Student awards (in Chinese)</strong></p>
 <ul>
-<li><p>“政务关注”省级社会调研大赛之第四届公共治理数据分析大赛暨第二届城市管理案例创新大赛，优胜奖，联合指导老师[2020.12]</p></li>
+<li><p>[1]省级，“政务关注”省级社会调研大赛之第四届公共治理数据分析大赛暨第二届城市管理案例创新大赛，优胜奖，联合指导老师[2020.12]</p></li>
+<li><p>[2]国家级，全国大学生测绘学科创新创业智能大赛，一等奖，指导老师[2023.08]</p></li>
 </ul>
 
 <p><strong>Student project (in Chinese)</strong></p>
 <ul>
-<li><p>[1]2021，陈戴荣等，基于时空关联深度学习的大湾区臭氧预报研究，院级大创项目</p></li>
-<li><p>[2]2022，邱辉等，基于深度学习的林草火点遥感检测方法研究，国家级大创项目</p></li>
+<li><p>[1]2021，陈戴荣等，基于时空关联深度学习的大湾区臭氧预报研究，院级大创项目（优秀结题，发表中文论文1篇）</p></li>
+<li><p>[2]2022，邱辉等，基于深度学习的林草火点遥感检测方法研究，国家级大创项目（优秀结题）</p></li>
+<li><p>[3]2023，陈乐彦等，多源卫星融合的高精度CO2产品重建方法研究，院级大创项目</p></li>
 </ul>
 
     </div>
