--- a/paper.html
+++ b/paper.html
@@ -2008,7 +2008,10 @@
 <ul>
 
 
-<!-- 2023年（6篇）  -->
+<!-- 2023年（7篇）  -->
+<li><p>Wang, Y., Yuan, Q., <strong>Li, T.</strong>, Yang, Y., Zhou, S., Zhang, L., 2023. Seamless mapping of long-term (2010–2020) daily global XCO2 and XCH4 from the Greenhouse Gases Observing Satellite (GOSAT), Orbiting Carbon Observatory 2 (OCO-2), and CAMS global greenhouse gas reanalysis (CAMS-EGG4) with a spatiotemporally self-supervised fusion method.<em>Earth System Science Data</em>, 15, 3597-3622. <a href='https://doi.org/10.5194/essd-15-3597-2023 target='_blank' class='url'>https://doi.org/10.5194/essd-15-3597-2023</a> <strong>(SCI)</strong></p></li>
+
+
 <li><p>Jin, C., Yuan, Q., <strong>Li, T.</strong>, Wang, Y., Zhang, L., 2023. An optimized semi-empirical physical approach for satellite-based PM2.5 retrieval: embedding machine learning to simulate complex physical parameters.<em>Geoscientific Model Development</em>, 16, 4137-4154. <a href='https://doi.org/10.5194/gmd-16-4137-2023' target='_blank' class='url'>https://doi.org/10.5194/gmd-16-4137-2023</a> <strong>(SCI, Corresponding author)</strong></p></li>
 
 <li><p>Zhang, L., <strong>Li, T.</strong>, Wu, J., Yang, H., 2023. Global estimates of gap-free and fine-scale CO2 concentrations during 2014–2020 from satellite and reanalysis data.<em>Environment International</em>, 178, 108057. <a href='https://doi.org/10.1016/j.envint.2023.108057' target='_blank' class='url'>https://doi.org/10.1016/j.envint.2023.108057</a> <strong>(SCI, TOP, Corresponding author)</strong></p></li>
