Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2009,11 +2009,11 @@ He is mainly engaged in remote sensing of atmospheric environment. He innovative
 </p></li>
 
 <li><p>
-He has published more than 40 SCI papers, 17 of which have been published as the first or corresponding author in <i>GRL, GMD, EI, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals (12 papers in CAS Q1 journals).
+He has published more than 40 SCI papers in <i>GRL, GMD, EI, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals. All papers were cited for >2800 times, among which 8 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper).
 </p></li>
 
 <li><p>
-All papers were cited for >2700 times, among which 7 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper and also selected into the list of "100 most influential International academic papers of China in 2020" released by the Institute of Scientific and Technical Information of China).
+He was listed in the World's Top 2% Scientists (Stanford University, 2023). His paper was selected as one of the "China's Top 100 Most Influential International Academic Papers", and as "Top Downloaded Paper 2018-2019" of Journal of Geophysical Research-Atmosphere.
 </p></li>
 
 </ul>
