Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2013,7 +2013,7 @@ He has published more than 40 SCI papers in <i>GRL, GMD, EI, ISPRS P&RS, IEEE TG
 </p></li>
 
 <li><p>
-He was listed in the World's Top 2% Scientists (Stanford University, 2023). His paper was selected as one of the "China's Top 100 Most Influential International Academic Papers", and as "Top Downloaded Paper 2018-2019" of Journal of Geophysical Research-Atmosphere.
+He was listed in the World's Top 2% Scientists (Stanford University, 2023). His paper was selected as one of the "China's Top 100 Most Influential International Academic Papers", and as "Top Downloaded Paper 2018-2019" of Journal of Geophysical Research-Atmospheres.
 </p></li>
 
 </ul>
