Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2005,7 +2005,7 @@ Tongwen Li, Assistant Professor at School of Geospatial Engineering and Science,
 </p></li>
 
 <li><p>
-He is mainly engaged in remote sensing of atmospheric environment. He innovatively developed remote sensing estimation methods of atmospheric environment that combined geographical/physical laws and machine learning, and proposed missing data reconstruction methods based on multi-source information fusion.
+He primarily engages in mechanism-data integrated driven atmospheric environmental remote sensing research, specifically manifested in three aspects: (1) systematically proposing the principles and methods of geographically and temporally weighted machine learning models for atmospheric environmental remote sensing, (2) developing atmospheric remote sensing methods that couple physicochemical mechanisms and machine learning, and (3) establishing spatiotemporally seamless reconstruction models for atmospheric parameters through multi-source data fusion.
 </p></li>
 
 <li><p>
