Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2047,6 +2047,23 @@ He was listed in the World's Top 2% Scientists (Stanford University, 2023). His 
 <li><p><i>Journal of Geography and Cartography</i>, Editorial Board</p></li>
 </ul>
 
+<p><strong>Journal Reviewer</strong></p>
+<ul>
+<li><p>Geophysical Research Letters</p></li>
+<li><p>Remote Sensing of Environment</p></li>
+<li><p>ISPRS Journal of Photogrammetry and Remote Sensing</p></li>
+<li><p>IEEE Transactions on Geoscience and Remote Sensing</p></li>
+<li><p>Earth System Science Data</p></li>
+<li><p>PNAS Nexus</p></li>
+<li><p>International Journal of Applied Earth Observations and Geoinformation</p></li>
+<li><p>Journal of Cleaner Production</p></li>
+<li><p>Journal of Environmental Management</p></li>
+<li><p>Science of the Total Environment</p></li>
+<li><p>International Journal of Digital Earth</p></li>
+<li><p>Atmospheric Environment</p></li>
+<li><p>...</p></li>
+</ul>
+
 
     </div>
 </article>
