--- a/paper.html
+++ b/paper.html
@@ -2009,6 +2009,8 @@
 
 
 <!-- 2023年（7篇）  -->
+<li><p>Yang, H., <strong>Li, T.</strong>, Wu, J., Zhang, L., 2023. Inter-comparison and evaluation of global satellite XCO2 products. <em>Geo-spatial Information Science</em>, 1-14. <a href='https://doi.org/10.1080/10095020.2023.2252017' target='_blank' class='url'>https://doi.org/10.1080/10095020.2023.2252017</a> <strong>(SCI, Corresponding author)</strong></p></li>
+
 <li><p>Wang, Y., Yuan, Q., <strong>Li, T.</strong>, Yang, Y., Zhou, S., Zhang, L., 2023. Seamless mapping of long-term (2010–2020) daily global XCO2 and XCH4 from the Greenhouse Gases Observing Satellite (GOSAT), Orbiting Carbon Observatory 2 (OCO-2), and CAMS global greenhouse gas reanalysis (CAMS-EGG4) with a spatiotemporally self-supervised fusion method.<em>Earth System Science Data</em>, 15, 3597-3622. <a href='https://doi.org/10.5194/essd-15-3597-2023' target='_blank' class='url'>https://doi.org/10.5194/essd-15-3597-2023</a> <strong>(SCI)</strong></p></li>
 
 
