Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/teaching.html
+++ b/teaching.html
@@ -2022,13 +2022,16 @@
 <li><p>[1]省级，“政务关注”省级社会调研大赛之第四届公共治理数据分析大赛暨第二届城市管理案例创新大赛，优胜奖，联合指导老师[2020.12]</p></li>
 <li><p>[2]国家级，全国大学生测绘学科创新创业智能大赛，一等奖，指导老师[2023.08]</p></li>
 <li><p>[3]院级，优秀本科毕业论文，指导老师[2023.08]</p></li>
+<li><p>[4]亚太地区数学建模竞赛，本科生组三等奖，指导老师[2023.08]</p></li>
 </ul>
 
 <p><strong>Student project (in Chinese)</strong></p>
 <ul>
 <li><p>[1]2021，陈戴荣等，基于时空关联深度学习的大湾区臭氧预报研究，院级大创项目（优秀结题，发表中文论文1篇）</p></li>
 <li><p>[2]2022，邱辉等，基于深度学习的林草火点遥感检测方法研究，国家级大创项目（优秀结题）</p></li>
-<li><p>[3]2023，陈乐彦等，多源卫星融合的高精度CO2产品重建方法研究，校级大创项目</p></li>
+<li><p>[3]2023，陈乐彦等，多源卫星融合的高精度CO2产品重建方法研究，校级大创项目（优秀结题，获国家测绘智能一等奖，发表SCI一区论文1篇）</p></li>
+<li><p>[4]2024，王子豪等，多元信息联合的森林火情遥感实时预警方法与平台构建研究，校级大创项目（在研）</p></li>
+<li><p>[5]2024，朱健毅等，基于多源数据的全国CO2时空特征与影响因素分析研究，校级大创项目（在研）</p></li>
 </ul>
 
     </div>
