Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2051,6 +2051,7 @@ He was listed in the World's Top 2% Scientists (Stanford University, 2023). His 
 <ul>
 <li><p>Geophysical Research Letters</p></li>
 <li><p>Remote Sensing of Environment</p></li>
+<li><p>Environmental Science & Technology</p></li>
 <li><p>ISPRS Journal of Photogrammetry and Remote Sensing</p></li>
 <li><p>IEEE Transactions on Geoscience and Remote Sensing</p></li>
 <li><p>Earth System Science Data</p></li>
