--- a/index.html
+++ b/index.html
@@ -2020,7 +2020,8 @@ He was listed in the World's Top 2% Scientists (Stanford University, 2023). His 
 
 <p><strong>Employment</strong>
 <ul>
-<li><p>2020.09-now, Assistant Professor, Sun Yat-Sen University, Zhuhai, China</p></li>
+<li><p>2020.09-2024.04, Assistant Professor, Sun Yat-Sen University, Zhuhai, China</p></li>
+<li><p>2020.04-Present, Associate Professor, Sun Yat-Sen University, Zhuhai, China</p></li>
 </ul>
 
 <p><strong>Education</strong></p>
@@ -2083,7 +2084,7 @@ He was listed in the World's Top 2% Scientists (Stanford University, 2023). His 
             <section class="aside-section">
                 <h1><image width = "128" src="ltw.jpg"/></h1>
 				<ul class="category-list">
-				<li><a><font color = "#2B8CE3">Tongwen Li, Assistant Professor</font></a></li>
+				<li><a><font color = "#2B8CE3">Tongwen Li, Associate Professor</font></a></li>
 				<li><a><font color = "#2B8CE3">Sun Yat-Sen University</font></a></li>
 				<li><a><font color = "#2B8CE3">Zhuhai Campus of Sun Yat-Sen University, Zhuhai, China</font></a></li>
 				<li><a><font color = "#2B8CE3">Email: litw8@mail.sysu.edu.cn</font></a></li>
