--- a/teaching.html
+++ b/teaching.html
@@ -2051,7 +2051,7 @@
             <section class="aside-section">
                 <h1><image width = "128" src="ltw.jpg"/></h1>
 				<ul class="category-list">
-				<li><a><font color = "#2B8CE3">Tongwen Li, Assistant Professor</font></a></li>
+				<li><a><font color = "#2B8CE3">Tongwen Li, Associate Professor</font></a></li>
 				<li><a><font color = "#2B8CE3">Sun Yat-Sen University</font></a></li>
 				<li><a><font color = "#2B8CE3">Zhuhai Campus of Sun Yat-Sen University, Zhuhai, China</font></a></li>
 				<li><a><font color = "#2B8CE3">Email: litw8@mail.sysu.edu.cn</font></a></li>
