Signed-off-by: Li Tongwen <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2001,7 +2001,7 @@
 <p><strong>Brief Introduction</strong>
 <ul>
 <li><p>
-Tongwen Li, Assistant Professor at School of Geospatial Engineering and Science, Sun Yat-Sen University.
+Tongwen Li, Associate Professor at School of Geospatial Engineering and Science, Sun Yat-Sen University.
 </p></li>
 
 <li><p>
