Signed-off-by: TongwenLi <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2008,6 +2008,10 @@
 <ul>
 
 <!-- 2024年（1篇）  -->
+<li><p>Wu, J., <strong>Li, T.</strong>, Lin, L., Zeng, C., 2024. Progressive gap-filling in optical remote sensing imagery through a cascade of temporal and spatial reconstruction models.  <em>Remote Sensing of Environment</em>, 311, 114245. <a href='https://doi.org/10.1016/j.rse.2024.114245' target='_blank' class='url'>https://doi.org/10.1016/j.rse.2024.114245</a> <strong>(SCI, TOP, Corresponding author)</strong></p></li>
+
+<li><p>Jin, S., Wang, T., Huang, H., Zheng, X., <strong>Li, T.</strong>, Guo, Z., 2024. A self-adaptive wildfire detection algorithm by fusing physical and deep learning schemes. <em>International Journal of Applied Earth Observation and Geoinformation</em>, 127, 103671. <a href='https://doi.org/10.1016/j.jag.2024.103671' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2024.103671</a> <strong>(SCI)</strong></p></li>
+
 <li><p>Chen, J., Hu, R., Chen, L., Liao, Z., Che, L., <strong>Li, T.</strong>, 2024. Multi-sensor integrated mapping of global XCO2 from 2015 to 2021 with a local random forest model. <em>ISPRS Journal of Photogrammetry and Remote Sensing</em>, 208, 107-120. <a href='https://doi.org/10.1016/j.isprsjprs.2024.01.009' target='_blank' class='url'>https://doi.org/10.1016/j.isprsjprs.2024.01.009</a> <strong>(SCI, TOP, Corresponding author)</strong></p></li>
 
 <!-- 2023年（7篇）  -->
