Signed-off-by: TongwenLi <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2008,6 +2008,9 @@
 <ul>
 
 <!-- 2024年（1篇）  -->
+
+<li><p><strong>Li, T.</strong>, Wang, Y., Wu, J., 2024. Deriving PM2.5 from satellite observations with spatiotemporally weighted tree-based algorithms: enhancing modeling accuracy and interpretability. <em>npj Climate and Atmospheric Science</em>, 7, 138. <a href='https://doi.org/10.1038/s41612-024-00692-4' target='_blank' class='url'>https://doi.org/10.1038/s41612-024-00692-4</a> <strong>(SCI, First author)</strong></p></li>
+
 <li><p>Wu, J., <strong>Li, T.</strong>, Lin, L., Zeng, C., 2024. Progressive gap-filling in optical remote sensing imagery through a cascade of temporal and spatial reconstruction models.  <em>Remote Sensing of Environment</em>, 311, 114245. <a href='https://doi.org/10.1016/j.rse.2024.114245' target='_blank' class='url'>https://doi.org/10.1016/j.rse.2024.114245</a> <strong>(SCI, TOP, Corresponding author)</strong></p></li>
 
 <li><p>Jin, S., Wang, T., Huang, H., Zheng, X., <strong>Li, T.</strong>, Guo, Z., 2024. A self-adaptive wildfire detection algorithm by fusing physical and deep learning schemes. <em>International Journal of Applied Earth Observation and Geoinformation</em>, 127, 103671. <a href='https://doi.org/10.1016/j.jag.2024.103671' target='_blank' class='url'>https://doi.org/10.1016/j.jag.2024.103671</a> <strong>(SCI)</strong></p></li>
