Signed-off-by: TongwenLi <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2009,11 +2009,11 @@ He primarily engages in mechanism-data integrated driven atmospheric environment
 </p></li>
 
 <li><p>
-He has published more than 40 SCI papers in <i>GRL, GMD, EI, ISPRS P&RS, IEEE TGRS, JAG</i>, and other famous journals. All papers were cited for >2800 times, among which 8 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper).
+He has published more than 40 SCI papers in <i>npj CAS, GRL, RSE, ISPRS P&RS, IEEE TGRS, GMD</i>, and other famous journals. All papers were cited for >3900 times, among which 8 papers were cited for >100 times (Google Scholar); 5 papers were selected into ESI highly cited database (one was ESI hot paper).
 </p></li>
 
 <li><p>
-He was listed in the World's Top 2% Scientists (Stanford University, 2023). His paper was selected as one of the "China's Top 100 Most Influential International Academic Papers", and as "Top Downloaded Paper 2018-2019" of Journal of Geophysical Research-Atmospheres.
+He was listed in the World's Top 2% Scientists of Stanford University for two consecutive years (2023 and 2024). He was awarded the First Prize of the Geographic Information Science and Technology Progress Award. His paper was selected as one of the "China's Top 100 Most Influential International Academic Papers", and as "Top Downloaded Paper 2018-2019" of Journal of Geophysical Research-Atmospheres.
 </p></li>
 
 </ul>
