Signed-off-by: TongwenLi <litw8@mail.sysu.edu.cn>

--- a/index.html
+++ b/index.html
@@ -2053,8 +2053,10 @@ He was listed in the World's Top 2% Scientists of Stanford University for two co
 <li><p>Geophysical Research Letters</p></li>
 <li><p>Remote Sensing of Environment</p></li>
 <li><p>Environmental Science & Technology</p></li>
+<li><p>Atmospheric Chemistry and Physics</p></li>
 <li><p>ISPRS Journal of Photogrammetry and Remote Sensing</p></li>
 <li><p>IEEE Transactions on Geoscience and Remote Sensing</p></li>
+<li><p>Journal of Geophysical Research: Atmospheres</p></li>
 <li><p>Earth System Science Data</p></li>
 <li><p>PNAS Nexus</p></li>
 <li><p>International Journal of Applied Earth Observations and Geoinformation</p></li>
