Signed-off-by: TongwenLi <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2006,8 +2006,10 @@
 	
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
+<!-- 2025年（1篇）  -->
+<li><p>Wang, Y., Yang, Y., Yuan, Q., <strong>Li, T.</strong>, Zhou, Y., Zong, L., Wang, M., Xie, Z., Ho, H.C., Gao, M., Tong, S., Lolli, S., & Zhang, L., 2025. Substantially underestimated global health risks of current ozone pollution. <em>Nature Communications</em>, 16, 102 <a href='https://doi.org/10.1038/s41467-024-55450-0' target='_blank' class='url'>https://doi.org/10.1038/s41467-024-55450-0</a> <strong>(SCI)</strong></p></li>
 
-<!-- 2024年（1篇）  -->
+<!-- 2024年（4篇）  -->
 
 <li><p><strong>Li, T.</strong>, Wang, Y., Wu, J., 2024. Deriving PM2.5 from satellite observations with spatiotemporally weighted tree-based algorithms: enhancing modeling accuracy and interpretability. <em>npj Climate and Atmospheric Science</em>, 7, 138. <a href='https://doi.org/10.1038/s41612-024-00692-4' target='_blank' class='url'>https://doi.org/10.1038/s41612-024-00692-4</a> <strong>(SCI, First author)</strong></p></li>
 
