Signed-off-by: TongwenLi <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2007,7 +2007,9 @@
     <p><strong>   1. Journal Papers</strong></p>
 <ul>
 <!-- 2025年（1篇）  -->
-<li><p>Wang, Y., Yang, Y., Yuan, Q., <strong>Li, T.</strong>, Zhou, Y., Zong, L., Wang, M., Xie, Z., Ho, H.C., Gao, M., Tong, S., Lolli, S., & Zhang, L., 2025. Substantially underestimated global health risks of current ozone pollution. <em>Nature Communications</em>, 16, 102 <a href='https://doi.org/10.1038/s41467-024-55450-0' target='_blank' class='url'>https://doi.org/10.1038/s41467-024-55450-0</a> <strong>(SCI)</strong></p></li>
+<li><p><strong>Li, T.</strong>, Wu, J., Wang, Y., Su, Y., 2025. Improved seamless mapping of surface O3 concentrations using an integrated deep learning framework. <em>npj Climate and Atmospheric Science</em>, 8, 124. <a href='https://doi.org/10.1038/s41612-025-01007-x' target='_blank' class='url'>https://doi.org/10.1038/s41612-025-01007-x</a> <strong>(SCI, First author)</strong></p></li>
+
+<li><p>Wang, Y., Yang, Y., Yuan, Q., <strong>Li, T.</strong>, Zhou, Y., Zong, L., Wang, M., Xie, Z., Ho, H.C., Gao, M., Tong, S., Lolli, S.,  Zhang, L., 2025. Substantially underestimated global health risks of current ozone pollution. <em>Nature Communications</em>, 16, 102. <a href='https://doi.org/10.1038/s41467-024-55450-0' target='_blank' class='url'>https://doi.org/10.1038/s41467-024-55450-0</a> <strong>(SCI)</strong></p></li>
 
 <!-- 2024年（4篇）  -->
 
