Signed-off-by: TongwenLi <litw8@mail.sysu.edu.cn>

--- a/paper.html
+++ b/paper.html
@@ -2189,10 +2189,11 @@
 <ul>
 <li><p>沈焕锋，李同文. 一种结合卫星和站点观测反演时空连续PM2.5浓度的方法，授权号：ZL201510849327.0. 授权时间：2018.01</p> 
 </li>
+<li><p>李同文，阴顺超，程晓，吴金橄，王天星. 一种粒子直径约束的PM2.5深度学习遥感估算方法. 授权号：ZL202111340135.9. 授权时间：2025.05</p> 
+</li>
 <li><p>沈焕锋，周曼，李同文，袁强强. 一种结合遥感数据与社会感知数据的PM2.5深度学习反演方法. 申请号：201910451339.6.</p> 
 </li>
-<li><p>李同文，阴顺超，程晓，吴金橄，王天星. 一种粒子直径约束的PM2.5深度学习遥感估算方法. 申请号：202111340135.9.</p> 
-</li>
+
 <li><p>李同文，张岭峰，吴金橄. 一种全局-局部建模结合的卫星CO2浓度缺失信息重建方法. 申请号：202211258374.4.</p> 
 </li>
 </ul>
